fix visibility 2

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -67,3 +67,8 @@ body {
   text-align: center;
   line-height: 2;
 }
+
+#search-box {
+  visibility: hidden;
+  display: none;
+}
